--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,16 +1,21 @@
+
 body{
-    width: 100vw;
-    height: 100vh;
+    width: 1440px;
+    height: 714px;
     margin: 0;
+    background-color: black;
+    display: flex;
 }
 
 .block-header{
-    width: 100%;
-    height: 714px;
-    background-color: rgb(212, 212, 212);
+    width: 1440px;
+    height: auto;
+    background-color: #EEEEEE;
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    align-content: space-between;
 }
 
 .header-nav{
@@ -22,14 +27,30 @@ body{
 .header-app-stores-buttons{
     display: flex;
 }
-.app-store-button{
+.app-store-button, .google-play-button{
+    width: 134px;
+    height: 40px;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 24px;
     display: flex;
+    color: white;
+    background-color: black;
+    border-radius: 10%;
 }
-.google-play-button{
+/* .google-play-button{
     display: flex;
+    color: white;
+    background-color: black;
+} */
+
+.store-image{
+    width: 19.41px;
+    height: 25.38px;
 }
 .img-phone{
-    width: 400px;
+    width: 372px;
+    height: 338px;
 }
 .our-products{
     width: 100%;
